fixed spacing between first p and photo

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -193,6 +193,10 @@ td {
     a {
       color: #2a66af;
     }
+
+    p:first-child {
+      margin-top: 120px;
+    }
 }
 
 .content-container-first {
